--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_login"
     tools:context=".Register">
-
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_margin="30dp"
@@ -38,45 +36,77 @@
                 android:fontFamily="sans-serif-black"
                 android:text="Vui lòng cung cấp thông tin chính xác để chúng tôi cung cấp dịch vụ ngay cho bạn"
                 android:textSize="15dp" />
-            <EditText
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_fullname"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="FullName"
-                />
-            <EditText
-                android:id="@+id/txt_phonenumber"
+                android:paddingLeft="20dp"
+                app:counterEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:hint="FullName"
+                    android:inputType="text"
+                    android:paddingLeft="20dp"
+                    app:errorEnabled="true" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/phonenumber"
                 android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                app:counterEnabled="true"
+
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_madicine1"
-                android:hint="PhoneNumber"
-                />
+                android:hint="PhoneNumber"   >
 
-            <EditText
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_password"
                 android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                app:counterEnabled="true"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="Password"
-                android:inputType="textPassword"
-                />
-            <EditText
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_confirmpassword"
                 android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                app:counterEnabled="true"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="Confirm Password"
-                android:inputType="textPassword"
-                />
+                app:passwordToggleEnabled="true"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
 
 
@@ -84,7 +114,7 @@
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginTop="10dp"
                 android:text="Tôi đã đọc và đồng ý với các chính sách và điều khoản của Catus-13" />
 
@@ -94,6 +124,7 @@
                 android:layout_marginTop="30dp"
                 android:orientation="vertical">
                 <Button
+                    android:id="@+id/btn_dangky"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_button"
