--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_health_profile.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_health_profile.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green"
-    tools:context=".HealthProfile">
+    android:orientation="vertical"
+    tools:context=".Homepage">
 
     <LinearLayout
         tools:ignore="MissingConstraints"
@@ -73,7 +74,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <android.support.constraint.ConstraintLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
@@ -104,7 +105,7 @@
                                 app:srcCompat="@drawable/tt_camera" />
 
 
-                        </android.support.constraint.ConstraintLayout>
+                        </LinearLayout>
 
 
                     </LinearLayout>
@@ -323,4 +324,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
