--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_login.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_login.xml
@@ -43,21 +43,26 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_madicine1"
-                android:hint="Username/PhoneNumber"
+                android:hint="PhoneNumber"
               />
-
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_password"
                 android:paddingLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                app:counterEnabled="true"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/custom_madicine1"
                 android:hint="Password"
-                android:inputType="textPassword"
-                />
+                app:passwordToggleEnabled="true">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
             <TextView
+                android:id="@+id/tv_resetPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -72,6 +77,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
+                    android:id="@+id/btn_dangnhap"
                     android:background="@drawable/custom_button"
                     android:textColor="#fff"
                     android:layout_width="250dp"
@@ -97,6 +103,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/tv_signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="35dp"
