--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_medicalappointment.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_medicalappointment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,6 +27,7 @@
                 >
 
                 <ImageView
+                    android:id="@+id/tro_lai"
                     android:layout_marginLeft="20dp"
                     app:srcCompat="@drawable/icon_back"
                     android:layout_width="50dp"
@@ -125,7 +126,7 @@
                             android:hint="Bác sĩ"
                             android:inputType="textPersonName" />
                         <EditText
-                            android:id="@+id/txt_tgian"
+                            android:id="@+id/txt_tg"
                             android:paddingLeft="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
@@ -134,7 +135,7 @@
                             android:hint="Thời gian"
                             android:inputType="textPersonName" />
                         <EditText
-                            android:id="@+id/txt_lydokham"
+                            android:id="@+id/txt_lydo"
                             android:paddingLeft="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
@@ -143,7 +144,7 @@
                             android:hint="Lý do khám"
                             android:inputType="textPersonName" />
                         <EditText
-                            android:id="@+id/txt_ghichuthem"
+                            android:id="@+id/txt_ghichu"
                             android:paddingLeft="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
@@ -161,6 +162,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
+                            android:id="@+id/btn_luu"
                             android:background="@drawable/custom_button"
                             android:textColor="#fff"
                             android:layout_width="150dp"
@@ -178,6 +180,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/lich_su_dat"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
@@ -447,4 +450,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
