--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,6 +27,7 @@
                 >
 
                 <ImageView
+                    android:id="@+id/back"
                     android:layout_marginLeft="20dp"
                     app:srcCompat="@drawable/icon_back"
                     android:layout_width="50dp"
@@ -72,14 +73,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <android.support.constraint.ConstraintLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center">
 
                             <ImageView
                                 android:id="@+id/imageView3"
                                 android:layout_width="180dp"
-
                                 android:layout_height="180dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +88,7 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="1.0"
-                                app:srcCompat="@drawable/tt_user" />
+                                app:srcCompat="@drawable/img_user" />
 
                             <ImageView
                                 android:layout_width="50dp"
@@ -103,7 +104,7 @@
                                 app:srcCompat="@drawable/tt_camera" />
 
 
-                        </android.support.constraint.ConstraintLayout>
+                        </LinearLayout>
 
 
                     </LinearLayout>
@@ -152,7 +153,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Ngày Tháng Năm Sinh"
-                            android:inputType="textPersonName" />
+                            android:inputType="datetime" />
                         <LinearLayout
                             android:layout_marginTop="10dp"
                             android:gravity="center"
@@ -162,12 +163,12 @@
                             <CheckBox
                                 android:layout_marginLeft="50dp"
                                 android:layout_weight="1"
-                                android:id="@+id/editnam"
+                                android:id="@+id/nam"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Nam" />
                             <CheckBox
-                                android:id="@+id/editnu"
+                                android:id="@+id/nu"
                                android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -181,7 +182,7 @@
                             android:layout_marginTop="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Số điện thoại"
-                            android:inputType="textPersonName" />
+                            android:inputType="phone" />
                         <EditText
                             android:id="@+id/txt_msbh"
                             android:paddingLeft="20dp"
@@ -190,9 +191,9 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Mã số bảo hiểm y tế"
-                            android:inputType="textPersonName" />
+                            android:inputType="text" />
                         <EditText
-                            android:id="@+id/txt_cmnn"
+                            android:id="@+id/txt_cmnd"
                             android:paddingLeft="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
@@ -217,7 +218,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Email"
-                            android:inputType="textPersonName" />
+                            android:inputType="textWebEmailAddress" />
 
 
                     </LinearLayout>
@@ -288,7 +289,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Tiểu sử"
-                            android:inputType="textPersonName" />
+                            android:inputType="textMultiLine" />
 
 
 
@@ -304,6 +305,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
+                            android:id="@+id/btn_cancel"
                             android:layout_marginRight="50dp"
                             android:background="@drawable/custom_red"
                             android:textColor="#fff"
@@ -314,6 +316,7 @@
 
                             />
                         <Button
+                            android:id="@+id/btn_save"
                             android:background="@drawable/custom_button"
                             android:textColor="#fff"
                             android:layout_width="150dp"
@@ -333,4 +336,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
