--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green">
+    android:background="@color/green"
+    tools:context=".Reminder">
 
 
     <LinearLayout
@@ -117,6 +118,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-black"
@@ -125,6 +127,7 @@
                                     android:textSize="25dp" />
 
                                 <TextView
+                                    android:id="@+id/lichhen"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="8:30 bệnh viện K"
@@ -359,6 +362,7 @@
                                 android:layout_weight="1"
                                 />
                             <Button
+                                android:id="@+id/btn_dat_lich"
                                 android:background="@drawable/custom_button"
                                 android:textColor="#fff"
                                 android:layout_width="250dp"
@@ -381,4 +385,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
