--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_takemedicines.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_takemedicines.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -115,15 +115,17 @@
                             android:background="@drawable/custom_madicine1"
                             android:hint="Đơn vị"
                             android:inputType="textPersonName" />
+
                         <EditText
                             android:id="@+id/txt_thoigian"
-                            android:paddingLeft="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Thời gian"
-                            android:inputType="textPersonName" />
+                            android:inputType="textPersonName"
+                            android:paddingLeft="20dp" />
+
                         <EditText
                             android:id="@+id/txt_tba"
                             android:paddingLeft="20dp"
@@ -449,4 +451,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
