--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_login" />
 
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glregister1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="48dp" />
-            </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_password"
@@ -101,7 +101,6 @@
                 android:inputType="textPassword"
                 android:paddingLeft="20dp" />
 
-
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
@@ -110,7 +109,7 @@
                 android:minHeight="48dp"
                 android:text="@string/termofuse" />
 
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="match_parent"
 
                 android:layout_height="wrap_content"
@@ -128,12 +127,12 @@
                     android:textSize="25dp" />
                 />
 
-                <android.support.constraint.ConstraintLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp">
 
-                    <android.support.constraint.Guideline
+                    <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/glregister2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -161,13 +160,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/glregister2"
                         app:layout_constraintTop_toTopOf="parent" />
-                </android.support.constraint.ConstraintLayout>
-
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
-
-
-        </LinearLayout>
-
-
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
