--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_homeuser.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_homeuser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,8 +23,10 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/chuyen_menu"
-                    android:layout_marginLeft="10dp"
+                    android:id="@+id/Menu_icon"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="10dp"
                     app:srcCompat="@drawable/menu"
                     android:layout_width="50dp"
                     android:layout_height="50dp"/>
@@ -64,11 +66,8 @@
 
             </RelativeLayout>
 
-                    android:id="@+id/txt_xinchao"
-                    android:text="Xin chào Nhan"/>
-            </LinearLayout>
         </LinearLayout>
-        <!--phần đầu-->
+<!--phần đầu-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,11 +79,10 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_margin="20dp"
-                    android:orientation="vertical">
-
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -150,20 +148,12 @@
                                 android:layout_weight="1"
                                 app:srcCompat="@drawable/icon_left" />
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="70dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
                             android:background="@drawable/custom_medicine"
                             android:orientation="horizontal">
 
@@ -227,18 +217,16 @@
 <!--                    thuốc-->
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <android.support.constraint.ConstraintLayout
                             android:orientation="horizontal"
                             android:background="@drawable/custom_medical1"
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
-                            android:background="@drawable/custom_medical1"
-                            android:orientation="horizontal">
+                            android:layout_height="150dp">
 
                             <android.support.constraint.ConstraintLayout
                                 android:id="@+id/User_constraint1"
@@ -273,23 +261,6 @@
                                 <Button
                                     android:id="@+id/DoChiSoNgay"
                                     android:layout_width="200dp"
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginRight="10dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Hôm nay bạn vẫn khỏe chứ"
-                                    android:textColor="@color/black"
-                                    android:textSize="20dp" />
-
-                                <Button
-                                    android:id="@+id/dosk"
-                                    android:layout_width="250dp"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
                                     android:background="@drawable/custom_button"
@@ -317,7 +288,7 @@
                         </android.support.constraint.ConstraintLayout>
 
                     </LinearLayout>
-                    <!--        đo chỉ số-->
+<!--        đo chỉ số-->
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -342,11 +313,13 @@
                             android:orientation="vertical">
 
                             <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                                android:layout_margin="10dp"
+                                android:layout_weight="3"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp">
 
                                 <ImageView
-                                    android:id="@+id/hssk"
+                                    android:layout_weight="1"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -361,7 +334,7 @@
                                     app:srcCompat="@drawable/khaibaoyte" />
 
                                 <ImageView
-                                    android:id="@+id/cntc"
+                                    android:layout_weight="1"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -381,8 +354,6 @@
                                     android:layout_gravity="center"
                                     app:srcCompat="@drawable/baohiemyte" />
 
-                                    />
-
                                 <ImageView
                                     android:layout_weight="1"
                                     android:layout_width="120dp"
@@ -392,10 +363,6 @@
 
                                 <ImageView
                                     android:layout_weight="1"
-                                    />
-
-                                <ImageView
-                                    android:id="@+id/datlichkham"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -410,21 +377,6 @@
 
                                 <ImageView
                                     android:layout_weight="1"
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
-
-                                <ImageView
-                                    android:id="@+id/chisosk"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -432,10 +384,6 @@
 
                                 <ImageView
                                     android:layout_weight="1"
-                                    />
-
-                                <ImageView
-                                    android:id="@+id/tao_qr"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -443,7 +391,6 @@
 
                                 <ImageView
                                     android:layout_weight="1"
-                                    android:id="@+id/tvbs"
                                     android:layout_width="120dp"
                                     android:layout_height="120dp"
                                     android:layout_gravity="center"
@@ -472,21 +419,19 @@
 
 
                     </LinearLayout>
-                    <!--                    bạn cần gì-->
+<!--                    bạn cần gì-->
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <android.support.constraint.ConstraintLayout
                             android:orientation="horizontal"
                             android:background="@drawable/custom_medical1"
                             android:layout_width="match_parent"
-                            android:layout_height="150dp"
-                            android:background="@drawable/custom_medical1"
-                            android:orientation="horizontal">
+                            android:layout_height="150dp">
 
                             <android.support.constraint.ConstraintLayout
                                 android:id="@+id/User_constraint2"
@@ -586,7 +531,6 @@
                                 android:layout_centerInParent="true"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
                                 android:layout_marginLeft="10dp"
                                 android:orientation="vertical">
 
@@ -647,7 +591,6 @@
                             </LinearLayout>
 
                             <ImageView
-                                android:id="@+id/btn_hssk"
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:layout_alignParentRight="true"
@@ -663,4 +606,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
