--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_homepage.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_homepage.xml
@@ -7,14 +7,13 @@
 
     tools:context=".Homepage">
 
-    <androidx.viewpager.widget.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-
+    <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
