--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -75,14 +75,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <LinearLayout
+                        <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center">
+                            android:layout_height="match_parent">
 
                             <ImageView
                                 android:id="@+id/imageView3"
                                 android:layout_width="180dp"
+
                                 android:layout_height="180dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="1.0"
-                                app:srcCompat="@drawable/img_user" />
+                                app:srcCompat="@drawable/tt_user" />
 
                             <ImageView
                                 android:layout_width="50dp"
@@ -106,7 +106,7 @@
                                 app:srcCompat="@drawable/tt_camera" />
 
 
-                        </LinearLayout>
+                        </android.support.constraint.ConstraintLayout>
 
 
                     </LinearLayout>
@@ -230,7 +230,7 @@
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
                             android:hint="Email"
-                            android:inputType="textWebEmailAddress" />
+                            android:inputType="textPersonName" />
 
 
                     </LinearLayout>
@@ -314,7 +314,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
-                            android:id="@+id/btn_cancel"
                             android:layout_marginRight="50dp"
                             android:background="@drawable/custom_red"
                             android:textColor="#fff"
@@ -325,7 +324,6 @@
 
                             />
                         <Button
-                            android:id="@+id/btn_save"
                             android:background="@drawable/custom_button"
                             android:textColor="#fff"
                             android:layout_width="150dp"
@@ -345,4 +343,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
