--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_reminder.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
-    tools:context=".Reminder">
+    android:background="@color/green">
 
     <LinearLayout
         tools:ignore="MissingConstraints"
@@ -178,7 +177,6 @@
                                 android:orientation="vertical">
 
                                 <TextView
-
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-black"
@@ -187,7 +185,6 @@
                                     android:textSize="25dp" />
 
                                 <TextView
-                                    android:id="@+id/lichhen"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="8:30 bệnh viện K"
@@ -425,7 +422,6 @@
                                 />
                             <Button
                                 android:layout_margin="10dp"
-                                android:id="@+id/btn_dat_lich"
                                 android:background="@drawable/custom_button"
                                 android:textColor="#fff"
                                 android:layout_width="250dp"
@@ -448,4 +444,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
